--- a/tarea1.tex
+++ b/tarea1.tex
@@ -160,6 +160,34 @@
             (suponiendo que se pieden comprar por separado): \textbf{seguridad, 
             control de concurrencia, recuperación en caso de fallos, lengua de 
             consulta, mecanismo de visitas, manejo de transacciones}.
+            \begin{itemize}
+                \item {Seguridad \\
+                Esto es inclusive independiente del tipo de sistema que se 
+                tenga. La seguridad es indispensable, y más aún al ser un 
+                negocio, pues manejan información delicada acerca de clientes,
+                proveedores, empleados, entre otros.}
+                \item {Control de concurrencia \\
+                Cómo no se planea tener múltiples usuarios, entonces probablemente
+                no hays muchos problemas de concurrencia, por lo que no es 
+                necesario tener un control de ella}
+                \item {Recuperación en caso de fallos \\
+                Como toda la información estará en una sola computadora, 
+                entonces es de suma importancia pretefer la información es esa 
+                punica computadora. Por lo que la recuperación de fallos es 
+                indispensable}
+                \item {Lengua de consulta \\
+                Esto es independiente de la cantidad de usuarios o de 
+                computadoras, además de indispensable, pues no se podría 
+                manipular la onfromación sin ella}
+                \item {Mecanismo de visitas \\
+                Cómo no se planea tener visitas (pues sólo habrá un usuario), 
+                entonces no es necesario contar con un mecanismo de visitas.
+                }
+                \item {Manejo de transacciones \\
+                Esto también es independiente de la cantidad de usuarios o de la
+                cantidad de computadoras. Sin esto, no se podría garantizar la 
+                intergridad de los datos, por lo que es indispensable}
+            \end{itemize}
         }
     \end{enumerate}
 
