Añadiendo base de línea del tiempo

--- a/tarea1.tex
+++ b/tarea1.tex
@@ -15,6 +15,10 @@
 }
 
 
+\usepackage{chronosys}
+
+
+
 \begin{document}
     \title{Fundamentos de Bases de Datos \\
         Tarea 1 \\
@@ -128,6 +132,8 @@
         \item {
             Elabora una \textbf{línea de tiempo} en dónde indiques los principales
             hitos en el desarrollo de las bases de datos.
+            \startchronology[startyear=1950, stopyear=2010]
+            \stopchronology
             }
         \item {
             Indica las responsabilidades que tiene un \textbf{Sistema Manejador
